--- a/docs/1. Начало/3. Получение и настройка.md
+++ b/docs/1. Начало/3. Получение и настройка.md
@@ -23,7 +23,7 @@ title: Получение и настройка
 
 ## Настройка
 
-При запуске странички на телефоне тебе будет предложено "**добавить РПГ Органайзер на главный экран**". Соглашайся, так будет намного удобнее пользоваться (альтернативный способ - нажми Меню→Домашний экран).
+При запуске странички на телефоне тебе будет предложено "**добавить РПГ Органайзер на главный экран**". Соглашайся, так будет намного удобнее пользоваться (*альтернативный способ - нажми Меню→Домашний экран*).
 
 ![](../../static/img/добавитьПриложениеАндроид.jpg)
 
@@ -31,7 +31,7 @@ title: Получение и настройка
 
 :::info &nbsp;
 
-Не хочешь заморачиваться с настройками? Просто скачай готовый apk-установщик, если планируешь пользоваться органайзером на устройстве под Android.
+Не хочешь заморачиваться с настройками? Просто скачай готовый apk-установщик, если у тебя устройство на Android.
 
 Установщик доступен для скачивания по [этой ссылке](https://drive.google.com/file/d/1BUyBA1qvrd_jLdfq0jZMGbRtEn7iYFnU/view?usp=sharing).
 
