--- a/docs/2. Основные понятия/2. Персонаж.md
+++ b/docs/2. Основные понятия/2. Персонаж.md
@@ -9,7 +9,7 @@ title: Персонаж
 
 Персонаж в РПГ - виртуальный аватар, взаимодействующий с игровой вселенной. Сначала он слаб и безызвестен, но в процессе игры можно достичь максимального уровня и тогда жизнь становится великолепной - открывается возможность входить в особые зоны, носить специальные доспехи и играючи достигать любых целей. 
 
-*В реальности все еще интереснее! Мы создадим персонажа игры жизни, которым будешь ты сам!*
+*В реальности все еще интереснее! Мы создадим персонажа игры жизни, [которым будешь ты сам](https://nerdistway.blogspot.com/2013/08/blog-post_14.html)!*
 
 Концепция персонажа полезна, потому что:
 
