--- a/docs/2. Основные понятия/3. Характеристики.md
+++ b/docs/2. Основные понятия/3. Характеристики.md
@@ -11,7 +11,7 @@ title: Характеристики
 
 Герой с высокой ВЫНОСЛИВОСТЬЮ с большей вероятностью переживёт отравление ядом, прокачанным ВОСПРИЯТИЕМ раньше заметит врага, а с низким ИНТЕЛЛЕКТОМ вряд ли найдёт потайную дверь, ведущую в сокровищницу.
 
-Самой позитивной вещью является то, что параметры персонажа не являются чем-то статичным, а развиваются в процессе игры и сам процесс прокачки доставляет огромное удовольствие!
+Самой позитивной вещью является то, что параметры персонажа [не являются чем-то статичным, а развиваются в процессе игры](https://nerdistway.blogspot.com/2014/08/blog-post_28.html) и сам процесс прокачки доставляет огромное удовольствие!
 
 **Эта идея отлично подходит для реальной жизни!**
 
@@ -26,7 +26,7 @@ title: Характеристики
 
 ## Примеры характеристик
 
-В играх существует огромное разнообразие характеристик. От таких как "сила", "ловкость", "телосложение", "интеллект", "обаяние", "мудрость" (Подземелья и драконы) и "тело", "разум", "душа" (Tri-Stat dX) до таких как "отвращение к себе", "усталость", "любовь" (My Life With Master) и "секс", "деньги", "нытье", "курение" (Nicotine Girls). 
+В играх существует огромное разнообразие характеристик. От таких как "сила", "ловкость", "телосложение", "интеллект", "обаяние", "мудрость" (*Подземелья и драконы*) и "тело", "разум", "дух" (*Tri-Stat dX*) до таких как "отвращение к себе", "усталость", "любовь" (*My Life With Master*) и "секс", "деньги", "нытье", "курение" (*Nicotine Girls*). 
 
 **Подумай - какие характеристики подойдут твоему герою?**
 
