--- a/docs/2. Основные понятия/4. Навыки.md
+++ b/docs/2. Основные понятия/4. Навыки.md
@@ -27,7 +27,7 @@ title: Навыки
 
 ## Навыки влияют на характеристики
 
-Какое у тебя сейчас здоровье и как ты выглядишь на 95% следствие твоих хороших или плохих привычек. Если ты пьешь, куришь и ругаешься матом, то у тебя проблемы с характеристиками – **ЗДОРОВЬЕ** и **ХАРИЗМА**. Если развиваешь навык игры на гитаре, то улучшаешь **ОБАЯНИЕ**. Изучаешь программирование – **ИНТЕЛЛЕКТ**, рисование – **МЫШЛЕНИЕ**. То есть навыки развивают характеристики (а характеристики - наше все))). Поэтому В РПГ Органайзере каждый навык связан с той или иной характеристикой, а развивать характеристики можно только прокачивая навыки.
+Какое у тебя сейчас здоровье и как ты выглядишь на 95% следствие твоих хороших или плохих привычек. Если ты пьешь, куришь и ругаешься матом, то у тебя проблемы с характеристиками – **ЗДОРОВЬЕ** и **ХАРИЗМА**. Если развиваешь навык игры на гитаре, то улучшаешь **ОБАЯНИЕ**. Изучаешь программирование – **ИНТЕЛЛЕКТ**, рисование – **МЫШЛЕНИЕ**. То есть навыки развивают характеристики (*а характеристики - наше все)*)). Поэтому В РПГ Органайзере каждый навык связан с той или иной характеристикой, а развивать характеристики можно только прокачивая навыки.
 
 Примеры навыков и характеристик, которые они прокачивают:
 
