--- a/docs/2. Основные понятия/9. Уровни персонажа.md
+++ b/docs/2. Основные понятия/9. Уровни персонажа.md
@@ -5,6 +5,6 @@ title: Уровни персонажа
 
 ![](../../static/img/Уровни.jpg)
 
-В РПГ играх получение нового уровня является достижением определенного этапа в игре. Это как подняться на одну ступеньку выше. Это как подниматься вверх по лестнице вместо того, чтобы по веревке. Это - концентрат разбиения больших целей на мелкие подшаги!
+В РПГ играх получение нового уровня является достижением определенного этапа в игре. Это как подняться на одну ступеньку выше. Это как подниматься вверх по лестнице вместо того, чтобы по веревке. Это - концентрат разбиения больших целей на мелкие шаги! Уровни персонажа помогут тебе четко осознавать - [стал ли ты сегодня лучше, чем был вчера](https://nerdistway.blogspot.com/2017/05/blog-post_1.html)?
 
 В играх персонаж получает новый уровень каждый раз, когда количество его очков опыта достигает некоторого порогового значения. Только имей ввиду - каждый раз получить СЛЕДУЮЩИЙ уровень будет сложнее, чем предыдущий!
