--- a/docs/3. Туториал/1. Тренировочный перс.md
+++ b/docs/3. Туториал/1. Тренировочный перс.md
@@ -5,8 +5,6 @@ title: Тренировочный перс
 
 ![035](../../static/img/тренировочный_перс)
 
-При первом запуске у тебя будет полностью настроенный "тренировочный" персонаж, с которым можно опробовать все функции РПГ Органайзера. 
+При первом запуске у тебя будет полностью настроенный "тренировочный" персонаж, но в будущем мы сделаем своего)))
 
-Но в будущем мы будем стремиться, чтобы ты сделал все под себя)))
-
-Сейчас мы пройдем небольшой туториал, где ты попробуешь все, что есть в РПГ Органайзере и решишь - действительно ли ты готов к прокачке в реале?!
+Сейчас мы пройдем небольшой туториал, где ты опробуешь основные функции и решишь - действительно ли готов к [прокачке в реале](http://nerdistway.blogspot.com/2013/08/blog-post_5490.html)?!
