--- a/docs/3. Туториал/4. Файт.md
+++ b/docs/3. Туториал/4. Файт.md
@@ -24,7 +24,7 @@ title: ФАЙТ!!!
 
 Ты можешь выбирать следующее/предыдущее дело свайпом влево/вправо. Если "зажать" по картинке задач, выберется первая из доступных в списке. Я верю, ты освоишься))
 
-Чтобы увидеть дела списком (или список доступных квестов), жми сюда:
+Чтобы увидеть дела списком (*или список доступных квестов*), жми сюда:
 
 ![](../../static/img/дела_списком)
 
