--- a/docs/3. Туториал/5. Следующий уровень.md
+++ b/docs/3. Туториал/5. Следующий уровень.md
@@ -5,11 +5,11 @@ title: Следующий уровень
 
 ![](../../static/img/level_up)
 
-После того, как ты достигнешь следующего уровня, откроется лист персонажа. Ты получишь еще немного очков прокачки, которые тебе снова нужно будет распределить. Появятся новые задания, или усложнятся предыдущие.
+После того, как ты достигнешь следующего уровня, откроется лист персонажа. Ты получишь еще немного очков прокачки, которые тебе снова нужно будет распределить. Появятся новые задания, или усложнятся предыдущие. [Просто всегда двигайся вперед!](https://nerdistway.blogspot.com/2014/10/blog-post.html)
 
 [Так, уровень за уровнем, ступенька за ступенькой ты станешь тем, кем мечтал.](https://nerdistway.blogspot.com/2017/05/blog-post_1.html)
 
-Максимальный уровень в РПГ Органайзере - 100. Когда достигнешь уровня 100 - дай мне знать) Я буду тобой гордиться))
+Максимальный уровень в РПГ Органайзере - 100. Когда достигнешь уровня 100 - дай мне знать) Я буду тобой гордиться и впишу твое имя в "[Зал Славы](https://nerdistway.blogspot.com/2013/05/blog-post_91.html)"))
 
 Кстати, у нас еще есть группа в [телеграмме](https://t.me/rpgorganizerchat). Пиши туда, если будут вопросы.
 
