--- a/docs/4. Создание персонажа/1. Настройка перса.md
+++ b/docs/4. Создание персонажа/1. Настройка перса.md
@@ -7,9 +7,7 @@ title: Настройка перса
 
 Я уверен, что ты итак прекрасно знаешь, что тебе делать для того, чтобы стать мега крутым парнем/девченкой. Но если хочешь совета - добро пожаловать в мой блог) И напоминаю - если будут вопросы - смело задавай их в [телеграмме](https://t.me/rpgorganizerchat).
 
-Ладно, создаем [персонажа](/about-pers)...
-
-На главной странице кликни по картинке перса:
+Ладно, создаем [персонажа](/about-pers)... На главной странице кликни по картинке перса:
 
 ![](../../static/img/openPersWindow)
 
