--- a/docs/4. Создание персонажа/3. Навыки.md
+++ b/docs/4. Создание персонажа/3. Навыки.md
@@ -3,7 +3,7 @@ slug: /create-abils
 title: Навыки
 ---
 
-Как я говорил раньше, каждый навык будет "связан" с соответствующей характеристикой. [Навыки](/about-abils) развивают характеристики, а характеристики в основном служат для группировки навыков и более общей статистики твоего прогресса (чуть позже ты поймешь о чем это я).
+Как я говорил раньше, каждый навык будет "связан" с соответствующей характеристикой. [Навыки](/about-abils) развивают характеристики, а характеристики в основном служат для группировки навыков и более общей статистики твоего прогресса (*чуть позже ты поймешь о чем это я*).
 
 Сейчас посмотри на свою карту персонажа и подумай - как можно развивать добавленные характеристики? Например, силу можно развивать спортом, мышление - ежедневной игрой в шахматы или чтением умных книг, а здоровье - йогой и правильным питанием.
 
