--- a/docs/4. Создание персонажа/4. Наводим красоту.md
+++ b/docs/4. Создание персонажа/4. Наводим красоту.md
@@ -24,7 +24,7 @@ title: Наводим красоту
 ![](../../static/img/НастройкаХарактеристики.jpg)
 
 - **Описание характеристики** - что она представляет для тебя, чего поможет добиться, когда будет круто прокачана, за что она отвечает?
-- **Начальный уровень** - может быть у тебя уже есть какие-то успехи в этом качестве? Выбери начальное значение от 0 (полный лох) до 10 (невероятно крут).
+- **Начальный уровень** - может быть у тебя уже есть какие-то успехи в этом качестве? Выбери начальное значение от 0 (*полный лох*) до 10 (*невероятно крут*).
 - **Картинка** - нажми на изображение по умолчанию и выбери наиболее подходящее из встроенной библиотечки, либо укажи "путь в интернете".
 - **Навыки** - может быть нужно добавить еще навыков?
 - Повтори эти действия с остальными характеристиками...
