--- a/docs/4. Создание персонажа/5. Детальная настройка навыков.md
+++ b/docs/4. Создание персонажа/5. Детальная настройка навыков.md
@@ -5,7 +5,7 @@ title: Детальная настройка навыков
 
 Сейчас будет самый нудный (*а для кого то самый интересный*) этап в настройке персонажа РПГ Органайзера. А еще он самый важный. Не ленись пожалуйста!
 
-Тебе нужно будет прощелкать по каждому навыку и настроить для него прокачку по уровням. Если ты это сделаешь сейчас, потом тебе не надо будет тратить время и силы на планирование. Ты в курсе, что мы функционируем в двух режимах? Это сильно сбережет твои очки силы воли! К тому же ты будешь видеть свой путь героя.
+Тебе нужно будет прощелкать по каждому навыку и настроить для него прокачку по уровням. Если ты это сделаешь сейчас, потом тебе не надо будет тратить время и силы на планирование. Ты в курсе, что [мы функционируем в двух режимах](https://nerdistway.blogspot.com/2020/12/blog-post.html)? Это сильно [сбережет твои очки силы воли](https://nerdistway.blogspot.com/2013/12/blog-post_27.html)! К тому же ты будешь видеть свой путь героя.
 
 Открой первый навык из списка:
 
@@ -129,4 +129,4 @@ title: Детальная настройка навыков
 
 А теперь переходи к следующему навыку...
 
-Может быть этот этап займет у тебя достаточно долгое время, но это не важно. Потому что ты уже встал на героический путь, а этот этап сильно ускорить твое дальнейшее движение. Главное - знать чего ты хочешь и кто ты!
+Может быть этот этап займет у тебя достаточно долгое время, но это не важно, ведь этот этап сильно ускорит твое дальнейшее движение. Главное - знать [чего ты хочешь и кто ты](https://nerdistway.blogspot.com/2017/05/5.html)!
