--- a/docs/4. Создание персонажа/6. Квесты.md
+++ b/docs/4. Создание персонажа/6. Квесты.md
@@ -3,13 +3,13 @@ slug: /create-qwests
 title: Квесты
 ---
 
-[Квесты](/about-qwests) - тоже важная штука в РПГ Органайзере. Они помогают тебе достигать целей.
+[Квесты](/about-qwests) - тоже важная штука в РПГ Органайзере. Они помогают тебе достигать целей (не забывай про [условия создания хорошего квеста](https://nerdistway.blogspot.com/2013/08/blog-post.html)).
 
 Чтобы настроить новый квест - перейди на вкладку:
 
 ![](../../static/img/перейди_на_вкладку_квесты)
 
-Теперь перейди в редактирование (нажми шестеренку в правом нижнем углу):
+Теперь перейди в редактирование (*нажми шестеренку в правом нижнем углу*):
 
 ![](../../static/img/СохранитьИзменения.jpg)
 
@@ -17,15 +17,15 @@ title: Квесты
 
 ![](../../static/img/добавь_квест)
 
-Сохрани (опять нажми шестеренку):
+Сохрани (*опять нажми шестеренку*):
 
 ![](../../static/img/СохранитьИзменения.jpg)
 
-Перейди в инфу по квесту (тык!):
+Перейди в инфу по квесту (*тык!*):
 
 ![](../../static/img/перейди_в_инфу_квеста)
 
-В режим редактирования (нажми шестеренку):
+В режим редактирования (*нажми шестеренку*):
 
 ![](../../static/img/СохранитьИзменения.jpg)
 
@@ -49,16 +49,16 @@ title: Квесты
 
 ![](../../static/img/миссии_квеста)
 
-Их кстати можно двигать перетаскиванием (перетаскивай, нажимая на этот значок):
+Их кстати можно двигать перетаскиванием (*перетаскивай, нажимая на этот значок*):
 
 ![](../../static/img/двигать_перетаскиванием)
 
 ## Награда за квест
 
 
-Как я уже говорил, у каждого квеста должна быть причина, и должен быть результат. Награда создаст мотивацию к следующим свершениям и даст лучше почуствовать "вкус победы" - ощущение, очень важное для скромных ботанов.
+Как я уже говорил, у каждого квеста [должна быть причина, и должен быть результат](https://nerdistway.blogspot.com/2013/08/blog-post.html). Награда создаст мотивацию к следующим свершениям и даст лучше почувствовать "вкус победы" - ощущение, очень важное для скромных ботанов.
 
-В общем, за квест желательно назначить награду. Это может быть просто очки опыта (чем сложнее, тем больше опыта, или укажи число вручную):
+В общем, за квест желательно назначить награду. Это может быть просто очки опыта (*чем сложнее, тем больше опыта, или укажи число вручную*):
 
 ![](../../static/img/квест_очки_опыта)
 
@@ -74,7 +74,7 @@ title: Квесты
 
 ![](../../static/img/связь_навык)
 
-В этом случае в главном окне ты сможешь удобно перемещаться между навыком/квестом (тык! тык!):
+В этом случае в главном окне ты сможешь удобно перемещаться между навыком/квестом (*тык! тык!*):
 
 ![image-20210331105116731](../../static/img/из_навыка_в_квест)
 
@@ -84,7 +84,7 @@ title: Квесты
 
 ## Следующий квест
 
-С помощью этого можно настроить целую историю. Например, после квеста "Инструкция" я хочу заняться квестом "Мой блог". Но пока инструкция не дописана, блогом я заниматься не планирую. Тогда нужно добавить к квесту "Инструкция" следующий квест "блог" (кнопка наковальня - создать новый, шестеренка - выбрать из списка).
+С помощью этого можно настроить целую историю. Например, после квеста "Инструкция" я хочу заняться квестом "Мой блог". Но пока инструкция не дописана, блогом я заниматься не планирую. Тогда нужно добавить к квесту "Инструкция" следующий квест "блог" (*кнопка наковальня - создать новый, шестеренка - выбрать из списка*).
 
 ![](../../static/img/следующий квест)
 
