--- a/docs/4. Создание персонажа/7. Трофеи.md
+++ b/docs/4. Создание персонажа/7. Трофеи.md
@@ -3,9 +3,7 @@ slug: /create-rewards
 title: Трофеи
 ---
 
-Трофеи в отличие от артефактов - это такие [награды](/about-rewards), которые ты получаешь случайным образом за сам факт выполнения задач. Это как когда ты побеждаешь противника в игре, а из него вываливается что-то прикольное.
-
-Трофеи - это еще один способ немного поднять твою мотивацию, согласись, получение награды, которую не ожидаешь - очень приятно!
+Трофеи в отличие от артефактов - это такие [награды](/about-rewards), которые ты получаешь случайным образом за сам факт выполнения задач. Это как когда ты побеждаешь противника в игре, а из него вываливается что-то прикольное. Трофеи - это еще один способ немного поднять твою мотивацию, согласись, получение награды, которую не ожидаешь - очень приятно!
 
 :::info &nbsp;
 
@@ -34,7 +32,7 @@ title: Трофеи
 
 ![](../../static/img/переход_на_вкладку_инвентарь)
 
-И активируй режим редактирования (шестеренка в правом нижнем углу).
+И активируй режим редактирования (*шестеренка в правом нижнем углу*).
 
 ![](../../static/img/СохранитьИзменения.jpg)
 
@@ -50,7 +48,7 @@ title: Трофеи
 
 ![](../../static/img/инвентарь)
 
-Когда будешь готов поощерить себя - наградись в реале, а затем щелкни по изображению награды в РПГ Органайзере.
+Когда будешь готов поощрить себя - наградись в реале, а затем щелкни по изображению награды в РПГ Органайзере.
 
 ## Готово
 
