--- a/docs/6. Эпилог/1. Напутствие.md
+++ b/docs/6. Эпилог/1. Напутствие.md
@@ -5,7 +5,7 @@ title: Напутствие
 
 ![](../../static/img/старый_обиван)
 
-Ну вот собственно и все, начинающий Искатель Приключений! Я рассказал тебе все, что знал об РПГ Органайзере.
+Ну вот собственно и все, начинающий Искатель Приключений! Я рассказал тебе все, что знал об [РПГ Органайзере](https://nerdistway.blogspot.com/2013/07/mylife-rpg-organizer.html).
 
 Надеюсь, он поможет тебе стать лучше и достичь тех целей о которых ты мечтал!
 
