--- a/docs/2. Основные понятия/7. Награды.md
+++ b/docs/2. Основные понятия/7. Награды.md
@@ -7,7 +7,7 @@ title: Награды
 
 В героических сагах искателями приключений не всегда движет только лишь альтруизм и желание помочь ближним, а также жажда наживы, редких артефактов, золота и славы! Реальная жизнь ничем не лучше! Но и не хуже!
 
-Для того, чтобы поддерживать твою мотивацию на высоком уровне, в РПГ Органайзере есть "награды". Покупка новых солнечных очков (+5 к харизме), поход в IMax на любимый фильм (+3 к удовлетворенности), вкусный ужин в ресторане и просто +1000 рублей в фонд "побаловать себя" - вот примеры наград в реальной жизни!
+Для того, чтобы поддерживать твою мотивацию на высоком уровне, в РПГ Органайзере есть "награды". Покупка новых солнечных очков (+5 к харизме), поход в IMax на любимый фильм (*+3 к удовлетворенности*), вкусный ужин в ресторане и просто +1000 рублей в фонд "побаловать себя" - вот примеры наград в реальной жизни!
 
 Все награды делятся на два типа:
 
