--- a/docs/3. Туториал/3. Экран персонажа.md
+++ b/docs/3. Туториал/3. Экран персонажа.md
@@ -3,65 +3,67 @@ slug: /tutor-pers-list
 title: Экран персонажа
 ---
 
-Надеюсь, ты уже перешел на экран персонажа? Это твой тренировочный перс) Чуть позже ты сделаешь своего) Но что сейчас интересно - у него уже полностью настроены [характеристики](/about-characts)/[навыки](/about-abils)/[квесты](/about-qwests)/[награды](/about-rewards). Посмотри, как это все выглядит:
+Надеюсь, ты уже перешел на экран персонажа? Это твой тренировочный перс. У него уже полностью настроены [характеристики](/about-characts)/[навыки](/about-abils)/[квесты](/about-qwests)/[награды](/about-rewards). Посмотри, как это все выглядит:
 
 ![](../../static/img/тренировочный_перс_экран_перса)
 
-Еще есть крутая штука - [карта ума](https://mel.fm/blog/rafael-tyncherov1/8194-chto-takoye-karty-uma-i-kak-zarisovat-tsely-uchebnik) - ты можешь наглядно увидеть все аттрибуты твоего перса.
+Еще есть крутая штука - [карта ума](https://mel.fm/blog/rafael-tyncherov1/8194-chto-takoye-karty-uma-i-kak-zarisovat-tsely-uchebnik) - ты можешь **наглядно** увидеть все атрибуты героя.
 
 ![](../../static/img/тренировочный_перс_переход_на_карту_ума)
 
 ![](../../static/img/тренировочный_перс_карта_ума)
 
-## Распределение очков навыков
+## Открой навыки
 
-Чтобы в главном окне появились задания, и ты смог повышать свой уровень в реале - нужно открыть навыки. Для этих целей есть [очки прокачки](/about-abil-levels).
+Чтобы в главном окне появились задания, и ты смог повышать свой уровень в реале, нужно открыть навыки. Для этих целей есть [очки прокачки](/about-abil-levels). Очки прокачки - очень важная вещь. Они позволяют добиться постепенности развития - единственный вариант, который работает в реальной жизни (*и штука, которая так нравится нам в РПГ*).  Ты будешь получать немного очков в начале игры и с [каждым новым уровнем перса](/about-pers-level). Их количество будет немного варьироваться в зависимости от общего числа навыков персонажа так, чтобы к 100 уровню ты смог полностью раскрыть все твои таланты!
 
-В начале игры, а также с получением [нового уровня перса](/about-pers-level) ты будешь получать немного очков. В зависимости от общего количества навыков у твоего перса, количество очков прокачки будет варьироваться так, чтобы к 100 уровню ты смог полностью раскрыть все твои таланты! Очки навыков - очень важная вещь. Они позволяют добиться постепенности развития - единственный вариант, который работает в реальной жизни (и штука, которая так нравится нам в РПГ).
-
-Сейчас тебе нужно будет "прокачать" несколько навыков, чтобы в главном окне у тебя появились задачи и ты мог "качаться в реале".
-
-Чтобы сделать это - на экране персонажа просто нажми на "стрелочку вверх" напротив навыка, который бы ты хотел бы в себе развить:
+Сейчас тебе нужно будет "прокачать" несколько навыков, чтобы в главном окне у тебя появились задачи и ты мог "качаться в реале". Чтобы сделать это, на экране персонажа нажми на "стрелочку вверх" напротив навыка, который бы ты хотел бы в себе развить:
 
 ![](../../static/img/тренировочный_перс_прокачать_навык)
 
-Обрати внимание, если до этого он был на 0 уровне, то тебя перекинет на страничку его настройки, где ты сможешь подкорректировать его название, описание, картинку и... самое главное... настроить прокачку навыка по уровням!!!
+:::info &nbsp;
+
+Если до этого навык был на 0 уровне, то будет считаться, что ты его "открыл". 
+
+:::
+
+Если ты "открыл" новый навык - тебя перекинет на страничку его настройки, где ты сможешь подкорректировать его название, описание, картинку и... самое главное... настроить прокачку навыка по уровням!!!
 
 ## Прогрессия рулит
 
-Так как мы сейчас пользуемся тренировочным персом, все уже настроено, но в дальнейшем тебе придется делать это самому.
+Прокачка навыков по уровням - это САМАЯ ВАЖНАЯ ШТУКА РПГ ОРГАНАЙЗЕРА, которая обеспечивает постепенность и непрерывность твоего развития! Это то, что особенно отличает его от других похожих приложений. Именно эта функция делает его таким эффективным.
 
-Прокачка навыков по уровням - это САМАЯ ВАЖНАЯ ШТУКА РПГ ОРГАНАЙЗЕРА, которая обеспечивает постепенность прокачки! Это то, что особенно отличает его от других похожих приложений. Именно эта функция делает его таким эффективным в деле приобретения привычек и развития навыков.
+Ты помнишь, что в играх прокачка происходит постепенно? Сначала ты можешь пульнуть слабенький файербол на близкое расстояние, а позже - серию гигантских огненных шаров, испепеляющих толпы врагов. [Также и в реальной жизни](http://nerdistway.blogspot.com/2013/08/blog-post_5490.html)! Очень круто развивать свои навыки постепенно, начав с чего-то очень простого и постепенно увеличивая сложность. Прогрессия рулит! 
 
-Ты помнишь, что в играх прокачка происходит постепенно? Сначала ты можешь пульнуть слабенький файербол на близкое расстояние, а позже - серию гигантских огненных шаров, испепеляющих толпы врагов. Также и в реальной жизни! Очень круто развивать свои навыки постепенно, начав с чего-то очень простого и постепенно увеличивая сложность.
+Качки прекрасно об этом знают! Как там в тренажерке? В самом начале туда приходит тщедушный дохляк, который делает жим лежа пустого грифа штанги всего пару раз. А потом, постепенно добавляя по чуть-чуть повторы, подходы и веса - он преображается в крутого бодибилдера! Вот и привычки/навыки мы тоже будем развивать постепенно. 
 
-Прогрессия рулит! Качки прекрасно об этом знают! Как там в тренажерке? В самом начале туда приходит тщедушный дохляк, который делает жим лежа пустого грифа штанги всего пару раз. А потом, постепенно добавляя по чуть-чуть повторы, подходы и веса - он преображается в крутого бодибилдера!
+Каждая задача на каждом уровне навыка будет иметь свои различные качества (сложность). Чтобы настроить постепенность, **нужно определиться в чем измеряться прогресс в навыке**. 
 
-Вот и привычки/навыки мы тоже будем развивать постепенно. Помнишь, что навыки делятся на уровни от 0 до 10? Каждая задача на каждом уровне навыка будет иметь свои различные качества (сложность). Чтобы настроить постепенность, нужно определиться в чем измеряться прогресс в навыке. Например, крутость в медитации измеряется в минутах, а подтягиваний в количестве раз, пробежка - в количеств километров, а чтение - в прочитанных страницах или минутах сосредоточенного чтения.
+Крутость в медитации, например, измеряется в минутах, а подтягиваний в количестве раз, пробежка - в количеств километров, а чтение - в прочитанных страницах или минутах сосредоточенного чтения.
 
-Давай еще пример...
+Давай еще пример... Вот, ты хочешь развить навык "чтение умных книг"...  Обычно все пытаются приобретать новую привычку сразу, по максимуму. Например, планируют читать каждый день по 60 минут.. Поначалу все идет хорошо, но потом наступает трудный день, появляется много работы/учебы, а привычка то еще не сформировалась... Пропускают один день, потом другой, и уже возвращаются к тому, с чего начинали. Но [у нас другой путь](https://nerdistway.blogspot.com/2020/12/blog-post.html)!
 
-Например, ты хочешь приобрести такой навык, как "чтение умных книг". Обычно все пытаются приобретать новую привычку сразу, по максимуму. Например, планируют читать каждый день по 60 минут.. Поначалу все идет хорошо, но потом наступает трудный день, появляется много работы/учебы, а привычка то еще не сформировалась... Пропускают один день, потом другой, и уже возвращаются к тому, с чего начинали. Но у нас другой путь!
+Мы постараемся разделить каждый навык на этапы. Конкретно их будет 10. И тогда на первом уровне нужно будет заниматься чтением всего 6 минут, на втором 12 и.т.д. Я знаю ты можешь больше. Я верю, что можешь больше. Но наша цель - приобрести привычку, не пропускать. Сначала тебе нужно будет выполнить действие настолько простое, что глупо его не выполнять, а потом, когда привычка будет более крепкой, ты будешь добавлять сложность.  Этот способ реально хорошо работает) Опробовал на себе))) 
 
-Мы постараемся разделить каждый навык на этапы. Конкретно их будет 10. И тогда на первом уровне нужно будет заниматься чтением всего 6 минут, на втором 12 и.т.д.
+Этот способ дает сразу несколько преимуществ. Во-первых, **ты привыкаешь делать то, что задумал**. Во-вторых, ты **отвыкаешь быть неудачником**. В-третьих, ты **становишься крутым парнем** (*девчонкой*), который всегда побеждает)))
 
-Я знаю ты можешь больше. Я верю, что можешь больше. Но наша цель - приобрести привычку, не пропускать.
-
-Сначала тебе нужно будет выполнить действие настолько простое, что глупо его не выполнять, а потом, когда привычка будет более крепкой, ты будешь добавлять сложность. Этот способ реально хорошо работает) Опробовал на себе)))
-
-Этот способ дает сразу несколько преимуществ. Во-первых, ты привыкаешь делать то, что задумал. Во-вторых, ты отвыкаешь быть неудачником. В-третьих, ты становишься крутым парнем (девчонкой), который всегда побеждает)))
-
-Вот так, например будет выглядеть прокачка по уровням навыка "чтение":
+Вот так, например будет выглядеть прокачка по уровням навыка "чтение" у тренировочного персонажа:
 
 ![](../../static/img/тренировочный_перс_навык_чтение)
 
 Так как у тебя уже загружен "тренировочный перс", посмотри как там все это настроено, пощелкав по другим навыкам. Сейчас тебе просто достаточно уяснить, что прокачка в РПГ Органайзере постепенная, а подробно как все настраивать ты узнаешь, когда будем создавать своего персонажа!
 
-## Стоимость прокачки
+## Сложность навыков
 
-Не все навыки одинаковые. Они могут быть "обычные", могут быть "сложные", "очень сложные" и "Перки". Перки - это такие навыки, которые не делятся на уровни прокачки. Бывает, нужно сделать и такое, настойка перса - очень творческий процесс. Что будет перком, а что навыком - тебе решать.
+Не все навыки одинаковые. Они могут быть "обычные", "сложные", "очень сложные" и "[Перки](/about-perks)". Перки - это такие навыки, которые не делятся на уровни прокачки. Бывает, нужно сделать и такое, настойка перса - очень творческий процесс. Что будет перком, а что навыком - тебе решать.
 
 В зависимости от сложности прокачка стоит разное количество очков. Обычный навык - 1 за уровень, сложный - 2, очень сложный - 3. Обычный перк стоит 10 очков, сложный 20, очень сложный - 30.
+
+:::info &nbsp;
+
+Чем сложнее навык, тем больше [опыта](/about-exp) ты будешь получать, выполняя его задания!
+
+:::
 
 Если у тебя есть хотя бы одно очко прокачки, ты можешь его использовать, но если стоимость прокачки навыка/перка будет больше, чем у тебя есть, количество очков навыков примет отрицательное значение. Это как своеобразный кредит)) Почему так? Получается интереснее)))
 
@@ -70,7 +72,7 @@ title: Экран персонажа
 Наверное у тебя осталось еще немного очков навыков? Отлично! Ты можешь повысить уровень уже открытого, либо открыть/прокачать еще несколько.
 
 :::info &nbsp;
-Чем выше уровень навыка, тем больше игровых очков он будет приносить!
+Чем выше уровень навыка, тем больше игровых [опыта](/about-exp) он будет приносить!
 :::
 
 Распредели оставшиеся очки, у тебя получится что-то вроде этого:
