--- a/docs/3. Туториал/1. Тренировочный перс.md
+++ b/docs/3. Туториал/1. Тренировочный перс.md
@@ -7,4 +7,9 @@ title: Тренировочный перс
 
 При первом запуске у тебя будет полностью настроенный "тренировочный" персонаж, но в будущем мы сделаем своего)))
 
+Ты всегда можешь загрузить "тренировочного персонажа", нажав эту кнопку на экране перса (в режиме редактирования):
+
+![](../../static/img/загрузка_тренировочного_перса)
+
 Сейчас мы пройдем небольшой туториал, где ты опробуешь основные функции и решишь - действительно ли готов к [прокачке в реале](http://nerdistway.blogspot.com/2013/08/blog-post_5490.html)?!
+
