--- a/docs/3. Туториал/2. Твой первый уровень.md
+++ b/docs/3. Туториал/2. Твой первый уровень.md
@@ -9,7 +9,7 @@ title: Твой первый уровень
 
 Это - первый шаг в твоем (*супер*)геройском пути! Давай начнем?!
 
-Ты начинаешь игру никому не известным слабым персонажем нулевого уровня. Цель игры - прокачать персонажа (*и тебя тоже*) до максимального уровня (*100*). Чтобы прокачиваться, нужно побеждать монстров (*в их роли будут выступать твои ежедневные дела*). За победы ты будешь получать очки опыта - EXP (**EX**perience **P**oints). При достижении порогового значения EXP, будет получен новый уровень и несколько **О**чков **Н**авыков (*ОН*), на которые можно развивать навыки (*тебе станут доступны новые задания, дающие больше опыта*).
+Ты начинаешь игру никому не известным слабым персонажем нулевого уровня. Цель игры - прокачать персонажа (*и тебя тоже*) до максимального уровня. Чтобы прокачиваться, нужно побеждать монстров (*в их роли будут выступать твои ежедневные дела*). За победы ты будешь получать очки опыта - EXP (**EX**perience **P**oints). При достижении порогового значения EXP, будет получен новый уровень и несколько **О**чков **Н**авыков (*ОН*), на которые можно развивать навыки (*тебе станут доступны новые задания, дающие больше опыта*).
 
 Сейчас ты находишься на... давай будем называть это место "Главное окно":
 
