--- a/docs/3. Туториал/3. Экран персонажа.md
+++ b/docs/3. Туториал/3. Экран персонажа.md
@@ -15,7 +15,9 @@ title: Экран персонажа
 
 ## Открой навыки
 
-Чтобы в главном окне появились задания, и ты смог повышать свой уровень в реале, нужно открыть навыки. Для этих целей есть [очки прокачки](/about-abil-levels). Очки прокачки - очень важная вещь. Они позволяют добиться постепенности развития - единственный вариант, который работает в реальной жизни (*и штука, которая так нравится нам в РПГ*).  Ты будешь получать немного очков в начале игры и с [каждым новым уровнем перса](/about-pers-level). Их количество будет немного варьироваться в зависимости от общего числа навыков персонажа так, чтобы к 100 уровню ты смог полностью раскрыть все твои таланты!
+Чтобы в главном окне появились задания, и ты смог повышать свой уровень в реале, нужно открыть навыки. Для этих целей есть [очки прокачки](/about-abil-levels). Очки прокачки - очень важная вещь. Они позволяют добиться постепенности развития - единственный вариант, который работает в реальной жизни (*и штука, которая так нравится нам в РПГ*). Очки прокачки ты будешь получать понемногу:
+- По одному очку [каждым новым уровнем перса](/about-pers-level).
+- В самом начале и каждые 5 уровней ты будешь получать дополнительное +1 очко.
 
 Сейчас тебе нужно будет "прокачать" несколько навыков, чтобы в главном окне у тебя появились задачи и ты мог "качаться в реале". Чтобы сделать это, на экране персонажа нажми на "стрелочку вверх" напротив навыка, который бы ты хотел бы в себе развить:
 
