--- a/docs/3. Туториал/5. Следующий уровень.md
+++ b/docs/3. Туториал/5. Следующий уровень.md
@@ -9,7 +9,7 @@ title: Следующий уровень
 
 [Так, уровень за уровнем, ступенька за ступенькой ты станешь тем, кем мечтал.](https://nerdistway.blogspot.com/2017/05/blog-post_1.html)
 
-Максимальный уровень в РПГ Органайзере - 100. Когда достигнешь уровня 100 - дай мне знать) Я буду тобой гордиться и впишу твое имя в "[Зал Славы](https://nerdistway.blogspot.com/2013/05/blog-post_91.html)"))
+Максимальный уровень в РПГ Органайзере у каждого свой в зависимости от общего числа навыков и перков. На максимальном уровне все твои таланты (*характеристики, навыки, перки*) прокачаются до конца, а твоя жизнь примет вид, о котором ты мечтал. Когда полностью прокачаешься - обязательно расскажи мне)) Я буду тобой гордиться и впишу твое имя в "[Зал Славы](https://nerdistway.blogspot.com/2013/05/blog-post_91.html)"))
 
 Кстати, у нас еще есть группа в [телеграмме](https://t.me/rpgorganizerchat). Пиши туда, если будут вопросы.
 
